--- a/week1/css/style1.css
+++ b/week1/css/style1.css
@@ -6,4 +6,10 @@ body {
 h1 {
     background-color: antiquewhite;
     padding: 1em;
-  }
+}
+
+textarea {
+    width: 800px;
+    height: 250px;
+    background-color: lightyellow;
+}
